# oplusclient

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  dev.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: opypackage-standard.yml
checks/: check_01.py
checks/resources/: test.epw  test.flo  test.xlsx
docs/: conf.py  index.rst  requirements.txt
docs/api_reference/: index.rst
docs/quickstart/: index.rst
oplusclient/: __init__.py  client.py  exceptions.py  rest_client.py  task.py  util.py
oplusclient/endpoints/: __init__.py  base.py  simulation.py
oplusclient/models/: __init__.py  _upload_download_base.py  base.py  floorspace.py  generic_simulation_group.py  geometry.py  import_export_base.py  mono_simulation_group.py  multi_simulation_group.py  obat.py  organization.py  project.py  simulation.py  simulation_group.py  weather.py
oplusclient/tools/: __init__.py  floorspace.py
samples/: cadastre.ipynb
tests/: _abstract.py  test_generic_simulation_group.py  test_geometry.py  test_multi_simulation_group.py  test_obat.py  test_simulation.py  test_weather.py
to_relink/: base.py  test_generic_simulation_group.py  test_geometry.py  test_multi_simulation_group.py  test_obat.py  test_pass.py  test_simulation.py  test_weather.py
vbpclient/: __init__.py  conf.py  exceptions.py  high_level_client.py  low_level_client.py  struct.py  tasker.py
vbpclient/core/: __init__.py  conf.py  high_level_client.py  low_level_client.py  models.py  struct.py  tasker.py
vbpclient/models/: __init__.py  generic_simulation_group.py  geometry.py  obat.py  (+7 more)
(+12 files in other folders)
