[tool.poetry]
name = "oplusclient"
version = "1.5.1"
description = "A python client for Oplus"
authors = ["Openergy dev team"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/openergy/oplusclient"
homepage = "https://github.com/openergy/oplusclient"
include = ["oplusclient/tools/resources/empty_floorplan.flo"]

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.23"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
